--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.302",
     "react-simple-typewriter": "^5.0.1",
     "swiper": "^11.2.8",
     "tailwindcss": "^4.1.10"
