--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "framer-motion": "^12.17.0",
+    "lenis": "^1.3.11",
     "particles.js": "^2.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
